[gd_scene load_steps=2 format=3 uid="uid://drffjlsqb5lod"]

[ext_resource type="Script" path="res://main.gd" id="1_djg2a"]

[node name="Main" type="Node"]
script = ExtResource("1_djg2a")

[node name="MapInstance" type="Node" parent="."]
unique_name_in_owner = true

[node name="SpawnPosition" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(350, 200)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ChatBox" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -203.0
offset_right = 350.0
offset_bottom = 227.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/ChatBox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="DisplayedMessage" type="VBoxContainer" parent="Control/ChatBox/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SendMessage" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -207.0
offset_top = -41.0
offset_right = 207.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/SendMessage"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Control/SendMessage/MarginContainer"]
layout_mode = 2

[node name="Info" type="Label" parent="Control/SendMessage/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Say : "

[node name="MessageInput" type="LineEdit" parent="Control/SendMessage/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
max_length = 35

[node name="Lobby" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -91.0
offset_right = 150.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Lobby"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Lobby/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Lobby/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="EnterGameButton" type="Button" parent="Control/Lobby/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Enter game"

[node name="HSeparator" type="HSeparator" parent="Control/Lobby/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="DisconnectButton" type="Button" parent="Control/Lobby/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="VSeparator" type="VSeparator" parent="Control/Lobby/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/Lobby/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Lobby/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Player(s) connected:"

[node name="LobbyConnectedPlayers" type="VBoxContainer" parent="Control/Lobby/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Scoreboard" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -128.0
offset_right = 258.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Scoreboard"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Scoreboard/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Scoreboard/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Scoreboard/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Players:"

[node name="PlayersConnectedList" type="VBoxContainer" parent="Control/Scoreboard/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MainMenu" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -118.5
offset_right = 150.0
offset_bottom = 118.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="HostButton" type="Button" parent="Control/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="HSeparator" type="HSeparator" parent="Control/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Username" type="LineEdit" parent="Control/MainMenu/MarginContainer/VBoxContainer" groups=["player_name"]]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Username"
max_length = 20

[node name="JoinButton" type="Button" parent="Control/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="HSeparator2" type="HSeparator" parent="Control/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="Control/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit game"

[node name="QuitConfirmation" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/QuitConfirmation"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Control/QuitConfirmation/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/QuitConfirmation/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/QuitConfirmation/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Are you sure you want to quit?"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/QuitConfirmation/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="YesButton" type="Button" parent="Control/QuitConfirmation/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Yes"

[node name="Label" type="Label" parent="Control/QuitConfirmation/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "     "

[node name="NoButton" type="Button" parent="Control/QuitConfirmation/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "No"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../SpawnPosition")

[node name="ChatBoxDisappearsTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="Control/Lobby/MarginContainer/HBoxContainer/VBoxContainer/EnterGameButton" to="." method="_on_enter_game_button_pressed"]
[connection signal="pressed" from="Control/Lobby/MarginContainer/HBoxContainer/VBoxContainer/DisconnectButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Control/Lobby/MarginContainer/HBoxContainer/VBoxContainer/DisconnectButton" to="." method="_on_disconnect_button_pressed"]
[connection signal="pressed" from="Control/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="text_submitted" from="Control/MainMenu/MarginContainer/VBoxContainer/Username" to="." method="_on_username_text_submitted"]
[connection signal="pressed" from="Control/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="button_down" from="Control/MainMenu/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="pressed" from="Control/QuitConfirmation/MarginContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="Control/QuitConfirmation/MarginContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="timeout" from="ChatBoxDisappearsTimer" to="." method="_on_chat_box_disappears_timer_timeout"]
