[gd_scene load_steps=4 format=3 uid="uid://x1lwev7chtcc"]

[ext_resource type="Script" path="res://main.gd" id="1_qmj53"]
[ext_resource type="PackedScene" uid="uid://dmqs76oj7hyhh" path="res://player.tscn" id="2_vtufg"]
[ext_resource type="PackedScene" uid="uid://clvp4cain5340" path="res://map.tscn" id="3_5fxvx"]

[node name="Main" type="Node"]
script = ExtResource("1_qmj53")
player = ExtResource("2_vtufg")
map = ExtResource("3_5fxvx")

[node name="MapInstance" type="Node" parent="."]
unique_name_in_owner = true

[node name="SpawnPosition" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(200, 150)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Menu" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="Control/Menu"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HostButton" type="Button" parent="Control/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Label" type="Label" parent="Control/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="To" type="LineEdit" parent="Control/Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter server IP"

[node name="JoinButton" type="Button" parent="Control/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Label2" type="Label" parent="Control/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="Control/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit game"

[node name="Lobby" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -51.5
offset_right = 75.0
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="Control/Lobby"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Lobby/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="EnterGameButton" type="Button" parent="Control/Lobby/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter game"

[node name="Label2" type="Label" parent="Control/Lobby/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DisconnectButton" type="Button" parent="Control/Lobby/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="DisplayPublicIP" type="Label" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../SpawnPosition")

[connection signal="pressed" from="Control/Menu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="text_submitted" from="Control/Menu/MarginContainer/VBoxContainer/To" to="." method="_on_to_text_submitted"]
[connection signal="pressed" from="Control/Menu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Control/Menu/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/Lobby/MarginContainer/VBoxContainer/EnterGameButton" to="." method="_on_enter_game_button_pressed"]
[connection signal="pressed" from="Control/Lobby/MarginContainer/VBoxContainer/DisconnectButton" to="." method="_on_disconnect_button_pressed"]
